--- a/WebContent/css/loginStylee.css
+++ b/WebContent/css/loginStylee.css
@@ -6,6 +6,7 @@
 * {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 	outline: none;
 }
 
@@ -31,7 +32,6 @@ body {
 
 .login-form {
 	margin-top: 60px;
-	float: left;
 }
 
 
