--- a/WebContent/css/loginStylee.css
+++ b/WebContent/css/loginStylee.css
@@ -65,3 +65,19 @@ form[role=login] {
 	.form-links a {
 		color: #fff;
 	}
+
+#table{
+	margin-top:100px;
+	border-box:0px 0px 0px 10px;
+	background-color:white;
+}
+
+#graphs{
+	margin-top:60px;
+
+}
+
+.histogram{
+	height: 80%;
+	width: 50%;
+}
