--- a/WebContent/css/bookingAndRegisterStyle.css
+++ b/WebContent/css/bookingAndRegisterStyle.css
@@ -10,6 +10,7 @@ html {
 
 body {
 	font-family: montserrat, arial, verdana;
+	overflow-x:hidden;
 }
 /*form styles*/
 #msform {
@@ -24,9 +25,8 @@ body {
 	border-radius: 3px;
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 	padding: 20px 30px;
-	
 	box-sizing: border-box;
-	width: 80%;
+	width: 70%;
 	margin: 0 10%;
 	
 	position: absolute;
@@ -46,7 +46,7 @@ body {
 }
 /*buttons*/
 #msform .action-button {
-	width: 100px;
+	width: 90px;
 	background: #27AE60;
 	font-weight: bold;
 	color: white;
@@ -72,10 +72,11 @@ body {
 }
 #progressbar li {
 	list-style-type: none;
+	margin:5px;
 	color: white;
 	text-transform: uppercase;
 	font-size: 9px;
-	width: 25%;
+	width: 20%;
 	float: left;
 	position: relative;
 }
