--- a/WebContent/css/loginStylee.css
+++ b/WebContent/css/loginStylee.css
@@ -67,9 +67,14 @@ form[role=login] {
 	}
 
 #table{
-	margin-top:50px;
+	margin-top:40px;
 	border-box:0px 0px 0px 10px;
-	background-color:white;
+	background-color: #E6E6E6;
+	overflow-y:scroll;
+}
+
+.table-hover tbody tr:hover > th {
+  background-color: #585858;
 }
 
 #graphs{
