--- a/WebContent/css/moreInfo.css
+++ b/WebContent/css/moreInfo.css
@@ -22,11 +22,15 @@ section div{
 	margin-left:8px;
 }
 
+h2 , p{
+	font-family: "Verdana", Geneva, sans-serif;
+}
+
 p{
 	float:right;
 	width:30%;
 	left:65%;
-	margin-top: -450px;
+	margin-top: -280px;
 	position:absolute;
 	border:1px solid white;
 	border-radius:3px;
@@ -42,7 +46,7 @@ p{
 }
 
 #bar-chart p{
-	margin-top: -310px;
+	margin-top: -300px;
 }
 
 .hideme{
