--- a/WebContent/css/moreInfo.css
+++ b/WebContent/css/moreInfo.css
@@ -7,7 +7,10 @@
 article{
 	box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
 	background-color:rgba(192,192,192,0.8);
-	padding:25px;
+	padding-bottom:10px;
+	padding-top:5px;
+	padding-left:15px;
+	padding-right:15px;
 	margin:25px;
 }
 
@@ -16,10 +19,10 @@ section{
 }
 
 section div{
-	width:65%;
+	width:80%;
 	height:100%;
 	display:inline-block;
-	margin-left:8px;
+	margin-left:5px;
 }
 
 h2 , p{
@@ -29,8 +32,8 @@ h2 , p{
 p{
 	float:right;
 	width:30%;
-	left:65%;
-	margin-top: -280px;
+	left:60%;
+	margin-top: -390px;
 	position:absolute;
 	border:1px solid white;
 	border-radius:3px;
@@ -59,5 +62,6 @@ p{
 }
 
 svg{
-	width: 650px;
+	width: 670px;
+	padding:15px;
 }
