--- a/WebContent/css/airportControllerStyle.css
+++ b/WebContent/css/airportControllerStyle.css
@@ -14,7 +14,7 @@ aside{
 	text-align:center;
 }
 
-section{
+#mapSect{
 	top:0;
 	position:absolute;
 	width:75%;
@@ -26,7 +26,7 @@ section{
 	box-sizing: border-box;
 }
 
-section #map{
+#map{
 	position: relative;
 	background-repeat: no-repeat;
 	width: 96%;
